Closed Bug 1354619 Opened 7 years ago Closed 7 years ago

Spammy "Cannot set transparency mode on non-popup windows" warning

Categories

(Core :: Widget: Gtk, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox-esr45 --- unaffected
firefox52 --- unaffected
firefox-esr52 --- unaffected
firefox53 --- unaffected
firefox54 --- fixed
firefox55 --- fixed

People

(Reporter: mconley, Assigned: lsalzman)

References

(Blocks 1 open bug)

Details

(Whiteboard: tpi:+)

Attachments

(1 file)

I added that warning in bug 1344839, and apparently we're hitting it a lot on Linux.

Easiest solution is to remove the warning - but I would like to understand who or what is trying (and failing) to set the transparency on the window.
Judging from how frequently I see it this may be of interest to erahm.

It prints out the message once every time I move my mouse over the title bar or maybe tab strip.

I'm using Ubuntu.
Priority: -- → P2
Whiteboard: tpi:+
It looks like the caller in this case is just nsContainerFrame::SyncWindowProperties doing what is a no-op call to reset the transparency mode (https://dxr.mozilla.org/mozilla-central/source/layout/generic/nsContainerFrame.cpp?q=nsContainerFrame%3A%3ASyncWindowProperties&redirect_type=direct#609).

Just moving the warning down after the mIsTransparent == isTransparent check should remove the spamminess of this while letting the warning stay.
Attachment #8857642 - Flags: review?(mconley)
Comment on attachment 8857642 [details] [diff] [review]
allow nsWindow::SetTransparencyMode when it preserves current mode

Review of attachment 8857642 [details] [diff] [review]:
-----------------------------------------------------------------

Ah, makes sense. Thanks!
Attachment #8857642 - Flags: review?(mconley) → review+
Pushed by lsalzman@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/1bde8c2a5dc9
allow nsWindow::SetTransparencyMode when it preserves current mode. r=mconley
https://hg.mozilla.org/mozilla-central/rev/1bde8c2a5dc9
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Comment on attachment 8857642 [details] [diff] [review]
allow nsWindow::SetTransparencyMode when it preserves current mode

Approval Request Comment
[Feature/Bug causing the regression]: bug 1344839, so 54+
[User impact if declined]: Excessive warning spam on Linux.
[Is this code covered by automated tests?]: yes
[Has the fix been verified in Nightly?]: yes
[Needs manual test from QE? If yes, steps to reproduce]: no 
[List of other uplifts needed for the feature/fix]:
[Is the change risky?]: no
[Why is the change risky/not risky?]: This does not change the semantics of the underlying code at all, and just silences a spammy warning on Linux.
[String changes made/needed]: none
Attachment #8857642 - Flags: approval-mozilla-aurora?
Assignee: nobody → lsalzman
Comment on attachment 8857642 [details] [diff] [review]
allow nsWindow::SetTransparencyMode when it preserves current mode

Fix an issue that generates excessive warning spam on Linux. Aurora54+.
Attachment #8857642 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Nice, why didn't you fix it on Windows, too? See bug 1356575.
(In reply to Jorg K (GMT+2) from comment #9)
> Nice, why didn't you fix it on Windows, too? See bug 1356575.

This was fixed in a general way for all platforms, but the underlying "problem" was benign on Linux, so that the fix merely happened to silence the warning there. If other platforms are still triggering, then have a real bug that is unrelated to this particular.
Blocks: logspam
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: