Bug 1354619 - Allow nsWindow::SetTransparencyMode when it preserves current mode. r=mconley, a=gchang

MozReview-Commit-ID: FEqPTGlpbjE